@@ -10,10 +10,13 @@ SUBDIRS = ${DLLWRAPPER} src
 
 ACLOCAL_AMFLAGS = -I m4
 
-CONFIG_CLEAN_FILES = shave·shave-libtool
-
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = libbml.pc
 
 EXTRA_DIST = \
 	libbml.pc.in
+
+# CLEANFILES is for files generated by make
+CLEANFILES = \
+  $(pkgconfig_DATA)
+
